<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Logrunner</string>
    <string name="version">0.9.8</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="title_activity_device_select">DeviceSelect</string>
    <string name="title_activity_settings">Settings</string>
    <string name="start_run">START RUN</string>
    <string name="stop_run">STOP</string>
    <string name="save">SAVE</string>
    <string name="save2">Save</string>
    <string name="discard">DISCARD</string>
    <string name="view_history">View History</string>
    <string name="detail_activity">Selected Run</string>
    <string name="temperature_c_unit">°C</string>
    <string name="temperature_f_unit">°F</string>
    <string name="barometer_kpa_unit">kPa</string>
    <string name="barometer_mbar_unit">mBar</string>
    <string name="barometer_inhg_unit">inHg</string>
    <string name="humidity_unit">%</string>
    <string name="init_value">--.--</string>
    <string name="about">About Logrunner</string>
    <string name="language">Language</string>
    <string name="dialog_title">Do you really want to delete the selected run?</string>
    <string name="delete">Delete</string>
    <string name="delete_all">Delete all runs</string>
    <string name="cancel">Cancel</string>
    <string name="feedback">Tells us what you think</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="problem">Let us know about a bug or a problem</string>
    <string name="report_problem">Report a problem</string>
    <string name="terms_and_services">Terms of Services</string>
    <string name="how_did_it_go">How did it go?</string>
    <string name="rate">Rate the run</string>

    <!-- Strings for bluetooth not connected dialog -->
    <string name="ble_not_connected_dialog_title">ShoeTag device not connected</string>
    <string name="ble_not_connected_dialog_content">
        Do you want to search for the device and connect to it?
    </string>
    <string name="ble_not_connected_dialog_positive">Connect Device</string>
    <string name="ble_not_connected_dialog_negative">Cancel</string>

    <!-- Strings for Intent Extra Names -->
    <string name="bluetooth_le_device_extra">ca.dreamteam.logrunner.bluetooth.device_extra</string>
    <string name="bluetooth_le_gatt_characteristic_extra">
        ca.dreamteam.logrunner.bluetooth.characteristic_extra
    </string>
    <string name="bluetooth_le_gatt_extra">ca.dreamteam.logrunner.bluetooth.gatt_extra</string>
    <string name="bluetooth_le_gatt_service_extra">
        ca.dreamteam.logrunner.bluetooth.service_extra
    </string>


    <!-- stuff related to the bluetooth device and service -->
    <string name="le_device_uuid"></string>
    <string name="le_service_uuid"></string>
    <string name="le_notification_characteristic_uuid"></string>
    <string name="le_control_characteristic_uuid"></string>



    <!-- Strings related to Settings -->
    <string name="pref_header_general">General</string>
    <string name="pref_header_Units">Units</string>
    <string name="pref_unit_settings_title">Unit Settings</string>
    <string name="pref_general_settings_title">General Settings</string>
    <string name="pref_run_settings_title">Run Settings</string>
    <string name="temp_unit_title">Temperature Units</string>
    <string name="pref_temp_unit_key">temp_unit_key</string>

    <string name="pref_default_value">1</string>

    <string-array name="temp_unit_list_titles">
        <item>Celsius</item>
        <item>Farenheit</item>
        <item>Kelvin</item>
    </string-array>
    <string-array name="temp_unit_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <string name="baro_unit_title">Pressure Units</string>
    <string name="pref_baro_unit_key">baro_unit_key</string>

    <string-array name="baro_unit_list_titles">
        <item>KiloPascal</item>
        <item>MilliBar</item>
        <item>Inch Hg</item>
    </string-array>
    <string-array name="baro_unit_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <string name="dist_unit_title">Distance Units</string>
    <string name="pref_dist_unit_key">dist_unit_key</string>

    <string-array name="dist_unit_list_titles">
        <item>Kilometer</item>
        <item>mile</item>
    </string-array>
    <string-array name="dist_unit_list_values">
        <item>1</item>
        <item>0</item>
    </string-array>

    <string name="title_activity_about">AboutActivity</string>
    <string name="pause">pause</string>
    <string name="resume">resume</string>
    <string name="stop">stop</string>

</resources>
