<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/pref_unit_settings_title"
        android:key="@string/pref_unit_settings_title">

    <ListPreference
        android:key="@string/pref_temp_unit_key"
        android:title="@string/temp_unit_title"
        android:defaultValue="1"
        android:entries="@array/temp_unit_list_titles"
        android:entryValues="@array/temp_unit_list_values"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null" />

    <ListPreference
        android:key="@string/pref_baro_unit_key"
        android:title="@string/baro_unit_title"
        android:defaultValue="1"
        android:entries="@array/baro_unit_list_titles"
        android:entryValues="@array/baro_unit_list_values"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null" />

    <ListPreference
        android:key="@string/pref_dist_unit_key"
        android:title="@string/dist_unit_title"
        android:defaultValue="1"
        android:entries="@array/dist_unit_list_titles"
        android:entryValues="@array/dist_unit_list_values"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null" />

    </PreferenceCategory>
</PreferenceScreen>
