<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF"
    tools:context="ca.dreamteam.logrunner.Util.AboutActivity">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/logrunner_icon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp" />

    <TextView
        android:id="@+id/build"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:textColor="#000000"
        android:layout_marginTop="195dp" />

    <TextView
        android:id="@+id/send_feedback"
        android:text="@string/send_feedback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textColor="#3366BB"
        android:textSize="18sp"
        android:layout_marginTop="250dp" />

    <TextView
        android:id="@+id/feedback"
        android:text="@string/feedback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="270dp" />

    <TextView
        android:id="@+id/report_problem"
        android:text="@string/report_problem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="18sp"
        android:textColor="#3366BB"
        android:layout_marginTop="315dp" />

    <TextView
        android:id="@+id/problem"
        android:text="@string/problem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="335dp" />

    <TextView
        android:id="@+id/terms_and_services"
        android:text="@string/terms_and_services"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textColor="#3366BB"
        android:textSize="18sp"
        android:layout_marginTop="395dp" />


</RelativeLayout>
